--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,15 @@ services:
     build:
       context: ./api-gateway/vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${GID}'
     image: sail-8.0/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
       - '8080:80'
+    environment:
+      WWWUSER: '${UID}'
     volumes:
       - './api-gateway/:/var/www/html'
     networks:
@@ -20,9 +24,13 @@ services:
     build:
       context: ./microservice-a/vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${GID}'
     image: sail-8.0/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    environment:
+      WWWUSER: '${UID}'
     volumes:
       - './microservice-a/:/var/www/html'
     networks:
@@ -31,9 +39,13 @@ services:
     build:
       context: ./microservice-b/vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${GID}'
     image: sail-8.0/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    environment:
+      WWWUSER: '${UID}'
     volumes:
       - './microservice-b/:/var/www/html'
     networks:
@@ -42,9 +54,13 @@ services:
     build:
       context: ./microservice-c/vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${GID}'
     image: sail-8.0/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    environment:
+      WWWUSER: '${UID}'
     volumes:
       - './microservice-c/:/var/www/html'
     networks:
@@ -53,9 +69,13 @@ services:
     build:
       context: ./microservice-d/vendor/laravel/sail/runtimes/8.0
       dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${GID}'
     image: sail-8.0/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    environment:
+      WWWUSER: '${UID}'
     volumes:
       - './microservice-d/:/var/www/html'
     networks:
